--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link href="index.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="index.js"></script>
-	<title>TRASPLANTADOS MEDULA OSEA</title>
+	<title>GQUE Desarrollos</title>
 </head>
 <body>
 
